@@ -88,6 +88,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-18 mar. 01:35]
      CLOCK: [2016-10-18 mar. 01:08]--[2016-10-18 mar. 01:19] =>  0:11
      CLOCK: [2016-10-15 sam. 01:44]--[2016-10-15 sam. 02:37] =>  0:53
      CLOCK: [2016-10-14 ven. 23:01]--[2016-10-15 sam. 00:15] =>  1:14
@@ -121,10 +122,12 @@
   - [X] Mouse Coords are wrong
 - [-] Next steps to get a working GUI
   - [X] Hide the system mouse cursor
-  - [ ] Seems the resize icon is wrong too
-    Maybe try the Vanilla mouse cursor
+  - [X] Seems the resize icon is wrong too
+    Maybe try the Vanilla mouse cursor : do not work
+    Testing with Taharez-based layout : it works fine
   - [ ] Make the exit button work
   - [ ] Maybe add a static image as logo
+  - [ ] Client has a segfault if we cancel Ogre configuration dialog
 **** DONE [test_ogre1.9] Let's test if switching to Ogre1.9
      CLOCK: [2016-10-12 mer. 01:19]--[2016-10-12 mer. 02:07] =>  0:48
      fix the client's issues
